@@ -439,6 +439,7 @@ extern int si_cpu_step_over_jpret(void);
 extern int debug_get_opcode_length(unsigned int direccion);
 
 extern void debug_cpu_step_over(void);
+extern void debug_cpu_run_until_ret(void);
 
 extern int debug_return_brk_pc_dir_condition(menu_z80_moto_int direccion);
 extern int debug_return_brk_pc_dir_condition_enabled_or_not(menu_z80_moto_int direccion);
